maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:63: error: not found: value i
			case Direction.NORD => i=0;j=-1
                                               ^JediEscaper:63: error: not found: value j
			case Direction.NORD => i=0;j=-1
                                                   ^JediEscaper:64: error: not found: value i
			case Direction.SUD => i=0;j=+1
                                              ^JediEscaper:64: error: not found: value j
			case Direction.SUD => i=0;j=+1
                                                  ^JediEscaper:65: error: not found: value i
			case Direction.EST=> i=+1;j=0
                                             ^JediEscaper:65: error: not found: value j
			case Direction.EST=> i=+1;j=0
                                                  ^JediEscaper:66: error: not found: value i
			case Direction.NORD => i=-1;j=0
                                               ^JediEscaper:66: error: not found: value j
			case Direction.NORD => i=-1;j=0
                                                    ^JediEscaper:69: error: not found: value i
			if (getIndication(x+i,y+j)<sol) {
                                            ^